ibm-bluemix-mosquitto: add missing ca-certificates
minideb doesn't install ca-certificates by default and that is required
by curl/wget when using over https.

Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/ibm-bluemix-mosquitto/Dockerfile
+++ b/ibm-bluemix-mosquitto/Dockerfile
@@ -3,7 +3,7 @@ FROM rsalveti/minideb:stretch-arm64
 # Share step with the bt-joiner container
 RUN install_packages bluez wget
 
-RUN install_packages mosquitto jq curl
+RUN install_packages ca-certificates mosquitto jq curl
 
 # Fix initial start failure so we can run the setup script
 RUN touch /var/log/mosquitto/mosquitto.log
