--- a/ibm-bluemix-mosquitto/Dockerfile.arm64
+++ b/ibm-bluemix-mosquitto/Dockerfile.arm64
@@ -1,4 +1,4 @@
-FROM rsalveti/minideb:stretch-arm64
+FROM linarotechnologies/minideb:stretch-arm64
 
 # Share step with the bt-joiner container
 RUN install_packages bluez wget
