bt-joiner: make sure log file is available when starting the container
Fix a no such file error when starting the container.

Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/bt-joiner/Dockerfile
+++ b/bt-joiner/Dockerfile
@@ -12,4 +12,4 @@ RUN chmod +x start.sh
 ENTRYPOINT ["/start.sh"]
 
 # Default to dump joiner log
-CMD tail -f /var/log/bluetooth_6lowpand.log
+CMD touch /var/log/bluetooth_6lowpand.log && tail -f /var/log/bluetooth_6lowpand.log
