--- a/bt-joiner/Dockerfile.armhf
+++ b/bt-joiner/Dockerfile.armhf
@@ -1,6 +1,6 @@
-FROM linarotechnologies/minideb:stretch-armhf
+FROM linarotechnologies/alpine:v3.5-armhf
 
-RUN install_packages bluez wget
+RUN apk add --no-cache bash bluez wget
 
 # BT 6lowpan joiner
 RUN mkdir -p /etc/bluetooth/6lowpand/
