mosquitto: convert to use alpine linux and read-only execution
Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/mosquitto/Dockerfile.armhf
+++ b/mosquitto/Dockerfile.armhf
@@ -1,11 +1,6 @@
-FROM linarotechnologies/minideb:stretch-armhf
+FROM linarotechnologies/alpine:edge-armhf
 
-RUN install_packages ca-certificates mosquitto
-
-# Fix initial start failure so we can run the setup script
-RUN touch /var/log/mosquitto/mosquitto.log
-RUN chown mosquitto:mosquitto /var/log/mosquitto/mosquitto.log
-RUN chmod 644 /var/log/mosquitto/mosquitto.log
+RUN apk add --no-cache ca-certificates mosquitto
 
 EXPOSE 1883 8883
 
