--- a/mosquitto/etc-mosquitto-template.conf
+++ b/mosquitto/etc-mosquitto-template.conf
@@ -7,6 +7,7 @@ start_type automatic
 bridge_attempt_unsubscribe false
 notifications false
 connection_messages true
+log_dest file /var/log/mosquitto.log
 
 # Device management subscriptions
 topic iotdm-1/type/+/id/# in 1 "" ""
