bt-joiner: add bluetooth_6lowpand.sh as part of the repo
Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/bt-joiner/Dockerfile
+++ b/bt-joiner/Dockerfile
@@ -1,10 +1,10 @@
 FROM alpine:v3.5
 
-RUN apk add --no-cache bash bluez wget
+RUN apk add --no-cache bash bluez
 
 # BT 6lowpan joiner
 RUN mkdir -p /etc/bluetooth/6lowpand/
-RUN wget --no-check-certificate https://raw.githubusercontent.com/linaro-technologies/iot-gateway-files/master/bluetooth_6lowpand.sh -O /usr/bin/bluetooth_6lowpand
+COPY bluetooth_6lowpand.sh /usr/bin/bluetooth_6lowpand
 RUN chmod +x /usr/bin/bluetooth_6lowpand
 
 # Default BlueZ main.conf
