bt-joiner: migrate to alpine edge for latest BlueZ
Now that we are not depending on the deprecated tools anymore, move to
the latest Alpine (edge) as it also includes the latest BlueZ release.

Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/bt-joiner/Dockerfile.arm64
+++ b/bt-joiner/Dockerfile.arm64
@@ -1,4 +1,4 @@
-FROM linarotechnologies/alpine:v3.5-arm64
+FROM linarotechnologies/alpine:edge-arm64
 
 RUN apk add --no-cache bluez py-dbus py-gobject3
 
