bt-joiner: drop bash dependency from bluetooth_6lowpand.sh
Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/bt-joiner/Dockerfile
+++ b/bt-joiner/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:v3.5
 
-RUN apk add --no-cache bash bluez py-dbus py-gobject3
+RUN apk add --no-cache bluez py-dbus py-gobject3
 
 # BT 6lowpan joiner
 RUN mkdir -p /etc/bluetooth/6lowpand/
