--- a/bt-joiner/Dockerfile.arm64
+++ b/bt-joiner/Dockerfile.arm64
@@ -1,6 +1,6 @@
 FROM linarotechnologies/alpine:v3.5-arm64
 
-RUN apk add --no-cache bash bluez py-dbus py-gobject3
+RUN apk add --no-cache bluez py-dbus py-gobject3
 
 # BT 6lowpan joiner
 RUN mkdir -p /etc/bluetooth/6lowpand/
