mosquitto: move mosquitto from entrypoint to cmd
Via CMD docker can track the execution status of the command, aborting
or restarting the container in case of errors with mosquitto.

Also changed default log output to stdout, so it can be stored as part
of the container log.

Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -8,5 +8,4 @@ COPY start.sh start.sh
 RUN chmod +x start.sh
 ENTRYPOINT ["/start.sh"]
 
-# Default to dump service log
-CMD tail -f /var/log/mosquitto/mosquitto.log
+CMD /usr/sbin/mosquitto -c /etc/mosquitto/conf.d/mosquitto.conf
