--- a/mosquitto/etc-mosquitto-template.conf
+++ b/mosquitto/etc-mosquitto-template.conf
@@ -1,13 +1,13 @@
 connection #connection-name
 address #url:#port
-remote_username #username 
+remote_username #username
 remote_password #password
 try_private false
 start_type automatic
 bridge_attempt_unsubscribe false
 notifications false
 connection_messages true
-log_dest file /var/log/mosquitto/mosquitto.log
+log_dest stdout
 
 # Device management subscriptions
 topic iotdm-1/type/+/id/# in 1 "" ""
