manifest: switch x86 containers to use specific tag
Signed-off-by: Tyler Baker <tyler.baker@linaro.org>

--- a/mosquitto/manifest.yaml
+++ b/mosquitto/manifest.yaml
@@ -11,7 +11,7 @@ manifests:
       architecture: arm
       os: linux
   -
-    image: linarotechnologies/mosquitto:latest
+    image: linarotechnologies/mosquitto:latest-amd64
     platform:
       architecture: amd64
       features:
