--- a/bt-joiner/manifest.yaml
+++ b/bt-joiner/manifest.yaml
@@ -11,7 +11,7 @@ manifests:
       architecture: arm
       os: linux
   -
-    image: linarotechnologies/bt-joiner:latest
+    image: linarotechnologies/bt-joiner:latest-amd64
     platform:
       architecture: amd64
       features:
