--- a/ibm-bluemix-mosquitto/manifest.yaml
+++ b/ibm-bluemix-mosquitto/manifest.yaml
@@ -11,7 +11,7 @@ manifests:
       architecture: arm
       os: linux
   -
-    image: linarotechnologies/ibm-bluemix-mosquitto:latest
+    image: linarotechnologies/ibm-bluemix-mosquitto:latest-amd64
     platform:
       architecture: amd64
       features:
