--- a/tinyproxy/manifest.yaml
+++ b/tinyproxy/manifest.yaml
@@ -11,7 +11,7 @@ manifests:
       architecture: arm
       os: linux
   -
-    image: linarotechnologies/tinyproxy:latest
+    image: linarotechnologies/tinyproxy:latest-amd64
     platform:
       architecture: amd64
       features:
