Dockerfiles: consolidate dockerfiles to use multi arch base images
Signed-off-by: Tyler Baker <tyler.baker@linaro.org>

--- a/ibm-bluemix-mosquitto/Dockerfile
+++ b/ibm-bluemix-mosquitto/Dockerfile
@@ -1,4 +1,4 @@
-FROM bitnami/minideb:unstable
+FROM linarotechnologies/minideb:stretch
 
 # Share step with the bt-joiner container
 RUN install_packages bluez wget
