cf-proxy: remove binary and replace with CI artifact
Signed-off-by: Tyler Baker <tyler.baker@linaro.org>

--- a/cf-proxy-coap-http/Dockerfile
+++ b/cf-proxy-coap-http/Dockerfile
@@ -1,12 +1,13 @@
 FROM linarotechnologies/alpine:edge
 
-RUN apk add --no-cache openjdk8-jre-base ca-certificates
+RUN apk add --no-cache wget openjdk8-jre-base ca-certificates
 
 RUN mkdir -p /opt/cf-proxy
 COPY Californium.properties /opt/cf-proxy
 COPY ProxyMapping.properties /opt/cf-proxy
 COPY Proxy.properties /opt/cf-proxy
-COPY cf-proxy-1.1.0-SNAPSHOT.jar /opt/cf-proxy
+RUN cd /opt/cf-proxy && \
+    wget https://api.linarotechnologies.org/projects/cf-proxy-coap-http/builds/2/runs/cf-proxy-coap-http/cf-proxy-1.1.0-SNAPSHOT.jar
 
 EXPOSE 5682
 
