--- a/nginx/nginx-lwm2m.conf
+++ b/nginx/nginx-lwm2m.conf
@@ -17,11 +17,13 @@ stream {
 
     server {
         listen  [::]:5683 udp;
+        listen  0.0.0.0:5683 udp;
         proxy_pass  gitci.com:5683;
     }
 
     server {
         listen  [::]:5684 udp;
+        listen  0.0.0.0:5684 udp;
         proxy_pass  gitci.com:5684;
     }
 }
