--- a/nginx/nginx-lwm2m.conf
+++ b/nginx/nginx-lwm2m.conf
@@ -26,4 +26,10 @@ stream {
         listen  0.0.0.0:5684 udp;
         proxy_pass  gitci.com:5684;
     }
+
+    server {
+        listen  [::]:5685 udp;
+        listen  0.0.0.0:5685 udp;
+        proxy_pass  gitci.com:5685;
+    }
 }
